set heroku env var. added code. all done.

--- a/public/index.html
+++ b/public/index.html
@@ -23,14 +23,16 @@
         </ul>
     </blockquote>
     <h3>Example creation usage:</h3>
-    <code>https://little-url.herokuapp.com/new/https://www.google.com</code><br/><code>https://little-url.herokuapp.com/new/http://foo.com:80</code>
+    <code>https://yasser-url-shortener.herokuapp.com/new/https://www.google.com</code>
+    <br/>
+    <code>https://yasser-url-shortener.herokuapp.com/new/http://foo.com:80</code>
     <h3>Example creation output</h3>
     <code>{
         "original_url":"http://foo.com:80",
         "short_url":"https://little-url.herokuapp.com/8170"
         }</code>
     <h3>Usage:</h3>
-    <code>https://little-url.herokuapp.com/2871</code>
+    <code>https://yasser-url-shortener.herokuapp.com/2871</code>
     <h3>Will redirect to:</h3>
     <code>https://www.google.com/</code>
 </div>
