--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <h3>Example creation output</h3>
     <code>{
         "original_url":"http://foo.com:80",
-        "short_url":"https://little-url.herokuapp.com/8170"
+        "short_url":"https://yasser-url-shortener.herokuapp.com/8170"
         }</code>
     <h3>Usage:</h3>
     <code>https://yasser-url-shortener.herokuapp.com/2871</code>
